feat: adding possibility to add other users to playlists
